AI Refactor for testing_automation-full_stack_E2E_code/backend/src/main/java/com/auth/config/SecurityConfig.java:
Changes:
- Removed unused import `java.util.Arrays` since it is not used (causes warning).